@@ -164,6 +164,7 @@ Leader_Follower_Task::svc (void)
         while (leader_available)
           {
             int result = this->synch_.condition_.wait ();
+            
             if (result == -1)
               {
                 ACE_ERROR_RETURN ((LM_ERROR,
@@ -289,6 +290,7 @@ int
 ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
   int result = parse_args (argc, argv);
+  
   if (result != 0)
     {
       return result;
@@ -304,12 +306,8 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
                   Leader_Follower_Task *[number_of_threads],
                   -1);
 
-
-
-
   int priority =
     ACE_Sched_Params::priority_max (ACE_SCHED_FIFO);
-
 
   long flags = THR_SCOPE_PROCESS;
 
@@ -365,11 +363,9 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
   test_timer.elapsed_time (elapsed_time);
 
   double elapsed_time_per_invocation =
-    static_cast<double> (elapsed_time / number_of_messages);
-
-  /*ACE_DEBUG ((LM_DEBUG,
-              "(%P|%t) Throughput is [%f] \n",
-              elapsed_time_per_invocation));*/
+    static_cast<double> (
+        ACE_UINT64_DBLCAST_ADAPTER (elapsed_time / number_of_messages)
+      );
 
   ACE_DEBUG ((LM_DEBUG,
               "(%P|%t) Throughput is [%f] \n",
@@ -383,6 +379,7 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
                   i, leader_followers[i]->processed ()));
       delete leader_followers[i];
     }
+    
   delete[] leader_followers;
 
   return result;
